force-app/main/default/objects/ssot__ActionPlanItem__dlm/fields/ssot__ActionPlanId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActionPlanId__c</fullName>
    <label>Action Plan</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActionPlanId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>