force-app/main/default/objects/ssot__ActionPlanItem__dlm/fields/ssot__ActionPlanItem_TargetId_map_Case_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActionPlanItem_TargetId_map_Case_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ActionPlanItem_TargetId_map_Case_Id_N_1</label>
    <referenceTo>ssot__Case__dlm</referenceTo>
    <relationshipLabel>ActionPlanItem_TargetId_map_Case_Id_N_1</relationshipLabel>
    <relationshipName>ActionPlanItem_TargetId_map_Case_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>