force-app/main/default/objects/ssot__ActionPlanItem__dlm/fields/ssot__IsRequired__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Required</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsRequired</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>