force-app/main/default/objects/ssot__ActionPlanItem__dlm/fields/ssot__ItemObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__ItemObject__c</fullName>
    <label>Item Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ItemObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>