force-app/main/default/objects/ssot__ActionPlanItem__dlm/fields/ssot__ItemState__c.field-meta.xml
<CustomField>
    <fullName>ssot__ItemState__c</fullName>
    <label>Item State</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ItemState</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>