force-app/main/default/objects/ssot__ActionPlanItem__dlm/fields/ssot__rel_1719817654609_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719817654609_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ActionPlanItem_TargetId_map_Account__rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>ActionPlanItem_TargetId_map_Account__rel</relationshipLabel>
    <relationshipName>rel_1719817654609_end</relationshipName>
    <type>Lookup</type>
</CustomField>