force-app/main/default/objects/ssot__ActionPlanItem__dlm/fields/ssot__rel_1719818170306_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719818170306_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ActionPlanItem_ActionPlanId_map_Acti_rel</label>
    <referenceTo>ssot__ActionPlan__dlm</referenceTo>
    <relationshipLabel>ActionPlanItem_ActionPlanId_map_Acti_rel</relationshipLabel>
    <relationshipName>rel_1719818170306_end</relationshipName>
    <type>Lookup</type>
</CustomField>