force-app/main/default/objects/ssot__ActionPlanItem__dlm/fields/ssot__rel_1719818173807_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719818173807_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ActionPlanItem_ActionPlanTemplateIte_rel</label>
    <referenceTo>ssot__ActionPlanTemplateItem__dlm</referenceTo>
    <relationshipLabel>ActionPlanItem_ActionPlanTemplateIte_rel</relationshipLabel>
    <relationshipName>rel_1719818173807_end</relationshipName>
    <type>Lookup</type>
</CustomField>