force-app/main/default/objects/ssot__ActionPlanItem__dlm/fields/ssot__TargetObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__TargetObject__c</fullName>
    <label>Target Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TargetObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>